--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.1",
     "massive": "^6.6.1",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.14",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
